--- a/Bakend/package.json
+++ b/Bakend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.19.2",
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.8",
     "nodemon": "^3.1.1"
   }
