--- a/my-project/package.json
+++ b/my-project/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "source-map-js": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -26,7 +28,9 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "path-browserify": "^1.0.1",
     "tailwindcss": "^3.4.3",
+    "url": "^0.11.3",
     "vite": "^5.2.0"
   }
 }
