--- a/my-project/package.json
+++ b/my-project/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-use": "^17.5.0",
     "source-map-js": "^1.2.0"
   },
   "devDependencies": {
